2020-01-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.1 released.

2020-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-interrupt-process):
	Bind `delete-exited-processes'.
	(tramp--test-async-shell-command): Bind `delete-exited-processes'.
	Add additional `accept-process-output'.  Move cleanup of output
	buffer ...
	(tramp-test32-shell-command): ... here.  Test error buffer also
	for `async-shell-command'.

2020-01-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command): Test error buffer
	for synchronous `shell-command' only.
	(tramp-test43-asynchronous-requests): Skip.

2020-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test44-threads): Remove.
	(tramp-test44-auto-load, tramp-test44-delay-load)
	(tramp-test44-recursive-load, tramp-test44-remote-load-path)
	(tramp-test45-unload): Rename.

2020-01-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-interrupt-process): Tag it :unstable.
	Change `accept-process-output' arguments.
	(tramp--test-async-shell-command): New defun.
	(tramp--test-shell-command-to-string-asynchronously): Use it.
	(tramp-test32-shell-command): Refactor code.

2020-01-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test30-make-process)
	(tramp-test32-shell-command): Test asynchronous stderr for tramp-adb.

2020-01-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test30-make-process):
	(tramp-test32-shell-command): Extend for asynchronous stderr.

2019-12-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3 released.

	* tramp-tests.el (tramp-test30-make-process): Simplify buffer
	generation.
	(tramp-test32-shell-command): Extend test.

2019-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (inhibit-message)
	(connection-local-criteria-alist)
	(connection-local-profile-alist, async-shell-command-width): Declare.