@@ -1,3 +1,13 @@
+2020-02-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (shell-command-dont-erase-buffer): Declare.
+	(tramp-test10-write-region, tramp-test21-file-links): Use function
+	symbols.
+	(tramp--test-async-shell-command): Don't assume that
+	`async-shell-command' returns the process object.
+	(tramp-test32-shell-command): Rework `async-shell-command-width' test.
+	(tramp-test32-shell-command-dont-erase-buffer): New test.
+
 2020-01-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.4.3.1 released.
